<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tip_10">10%</string>
    <string name="tip_15">15%</string>
    <string name="tip_20">20%</string>
    <string name="tip_perc_label">Please select desired Tip %</string>
    <string name="tip_label">Tip is:</string>
    <string name="tip_label_sb">Selected Tip % : </string>
    <string name="enter_amt_label">Please enter amount</string>
    <string name="default_tip">10</string>
    <string name="default_tip_amt">$0.00</string>

</resources>
