<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalcActivity" >

    <Button
        android:id="@+id/bt10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bt15"
        android:layout_toLeftOf="@+id/bt15"
        style="@style/btnStyleSeagull"
        android:maxHeight="15dp"
        android:maxWidth="15dp"
        android:text="@string/tip_10" />
	
    <Button
        android:id="@+id/bt15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/btnStyleSeagull"
        android:maxHeight="15dp"
        android:maxWidth="15dp"
        android:text="@string/tip_15" />

    <Button
        android:id="@+id/bt20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt15"
        android:layout_alignBottom="@+id/bt15"
        android:layout_toRightOf="@+id/bt15"
        style="@style/btnStyleSeagull"
        android:maxHeight="15dp"
        android:maxWidth="15dp"
        android:text="@string/tip_20" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        android:text="@string/tip_label" />

    <TextView
        android:id="@+id/tvTipAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTipLabel"
        android:layout_alignRight="@+id/bt20"
        android:layout_toRightOf="@+id/tvTipLabel"
        android:paddingLeft="10dp"
        android:gravity="left"
        android:text="@string/default_tip_amt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvTipPercLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt10"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_alignRight="@+id/bt20"
        android:layout_marginBottom="15dp"
        android:text="@string/tip_perc_label" />

    <SeekBar
        android:id="@+id/sbTipSel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt10"
        android:layout_below="@+id/bt10"
        android:max="100" />

    <TextView
        android:id="@+id/tvSeekBarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sbTipSel"
        android:layout_below="@+id/sbTipSel"
        android:text="@string/tip_label_sb" />

    <TextView
        android:id="@+id/tvTipSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sbTipSel"
        android:layout_toRightOf="@+id/tvSeekBarLabel"
        android:text="@string/default_tip" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTipPercLabel"
        android:layout_alignLeft="@+id/bt10"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvEnterAmtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etAmount"
        android:layout_alignLeft="@+id/etAmount"
        android:text="@string/enter_amt_label" />

</RelativeLayout>
